--- a/app/src/main/res/layout/nav_header_groups.xml
+++ b/app/src/main/res/layout/nav_header_groups.xml
@@ -29,7 +29,6 @@
     <TextView
         android:id="@+id/group_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/created_by_duckonmoon" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
