--- a/app/src/main/res/layout/new_year_dialog.xml
+++ b/app/src/main/res/layout/new_year_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="200dp"
     android:layout_gravity="center"
@@ -23,6 +22,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        fontPath="fonts/Sail-Regular.otf"
         android:gravity="center"
         android:paddingEnd="30dp"
         android:paddingStart="30dp"
