--- a/app/src/main/res/menu/group_details_menu.xml
+++ b/app/src/main/res/menu/group_details_menu.xml
@@ -6,5 +6,6 @@
         android:id="@+id/randomize"/>
 
     <item android:title="@string/my_wishlist"
+        android:visible="false"
         android:id="@+id/wish_list"/>
 </menu>
