--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -11,9 +11,14 @@
 
         <item
             android:id="@+id/unchecked_groups"
-            android:checked="true"
             android:title="@string/group_requests"
             android:icon="@drawable/ic_people_outline_black_24dp" />
+
+        <item
+            android:id="@+id/deleted_groups"
+            android:title="@string/trash"
+            android:icon="@drawable/ic_delete_sweep_black_24dp"
+            />
     </group>
 
 </menu>
