--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -55,13 +55,13 @@
 
                 <EditText
                     android:id="@+id/email"
-                    android:textColor="@color/mainAppColorDarker"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="20dp"
                     android:hint="@string/hint_email"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/mainAppColorDarker" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
@@ -89,8 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/btn_back"
-            />
+            android:text="@string/btn_back" />
 
     </LinearLayout>
 </FrameLayout>
