--- a/app/src/main/res/layout/group_details_tool_bar.xml
+++ b/app/src/main/res/layout/group_details_tool_bar.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bootstrapRed"
     android:elevation="2dp"
-    app:title=""
-    android:theme="@style/ActionBarStyle">
+    android:theme="@style/ActionBarStyle"
+    app:title="">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_christmas_house"/>
+        android:src="@mipmap/ic_christmas_house" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/group_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
             fontPath="fonts/Sail-Regular.otf"
-            android:textColor="@android:color/white" />
-        <TextView
-            android:textColor="@android:color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/member_count" />
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/member_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
-    
+
 </android.support.v7.widget.Toolbar>
