--- a/app/src/main/res/layout/new_year_confirmation_dialog.xml
+++ b/app/src/main/res/layout/new_year_confirmation_dialog.xml
@@ -51,11 +51,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/yes"
-        app:layout_constraintTop_toTopOf="@id/no"
         app:layout_constraintBottom_toBottomOf="@+id/no"
         app:layout_constraintEnd_toStartOf="@+id/no"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/no" />
 
     <Button
         android:id="@+id/no"
