--- a/app/src/main/res/layout/wish_item.xml
+++ b/app/src/main/res/layout/wish_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_field"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
-    android:textColor="@android:color/holo_red_dark"
-    android:id="@+id/text_field"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="@dimen/top_margin"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="@dimen/top_margin"
     android:background="@drawable/rectangle_white"
     android:padding="4dp"
+    android:paddingEnd="@dimen/top_margin"
     android:paddingStart="@dimen/top_margin"
-    android:paddingEnd="@dimen/top_margin">
-</TextView>
+    android:textColor="@android:color/holo_red_dark"
+    android:textSize="20sp"></TextView>
