--- a/app/src/main/res/layout/activity_my_wish_list.xml
+++ b/app/src/main/res/layout/activity_my_wish_list.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@drawable/christmas_image"
+    android:orientation="vertical"
     tools:context="com.softserveinc.test.secretsanta.activity.MyWishListActivity">
 
-    <include layout="@layout/group_details_tool_bar"
+    <include
         android:id="@+id/tool_bar"
+        layout="@layout/group_details_tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/top_margin"
-        android:orientation="horizontal"
         android:background="@drawable/rectangle_with_rounded_angles_almost_white"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal">
 
         <android.support.design.widget.TextInputLayout
-            android:layout_weight="10"
+            style="@style/TextLabel"
             android:layout_width="0dp"
-            android:layout_margin="@dimen/top_margin"
             android:layout_height="wrap_content"
-            style="@style/TextLabel">
+            android:layout_margin="@dimen/top_margin"
+            android:layout_weight="10">
+
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/wish_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/wish_text"
+                android:layout_marginBottom="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginBottom="10dp"
-                android:hint="@string/input_what_you_want_for_christmas"/>
+                android:hint="@string/input_what_you_want_for_christmas" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
+            android:id="@+id/add_button"
+            style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add"
-            android:id="@+id/add_button"
             android:layout_gravity="center_vertical"
-            style="@style/ButtonStyle"
-            android:layout_marginEnd="@dimen/top_margin"/>
+            android:layout_marginEnd="@dimen/top_margin"
+            android:text="@string/add" />
 
     </LinearLayout>
 
@@ -54,7 +55,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/top_margin"
-        tools:listitem="@layout/wish_item"
-        />
+        tools:listitem="@layout/wish_item" />
 
 </LinearLayout>
