--- a/app/src/main/res/layout/content_groups.xml
+++ b/app/src/main/res/layout/content_groups.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/christmas_image"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container"
+    android:background="@drawable/christmas_image"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.softserveinc.test.secretsanta.activity.GroupsActivity"
     tools:showIn="@layout/app_bar_groups">
@@ -13,14 +13,14 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp">
 
         <ProgressBar
-            android:layout_marginTop="24dp"
             android:id="@+id/spinner"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="24dp"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -31,11 +31,11 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/member_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/member_item" />
 
 
     </android.support.constraint.ConstraintLayout>
