--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:background="@drawable/christmas_image"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/christmas_image"
     android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/top_margin"
         android:layout_marginEnd="@dimen/top_margin"
+        android:layout_marginStart="@dimen/top_margin"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
@@ -90,16 +89,14 @@
 
         <Button
             android:id="@+id/btn_register"
-            android:background="@drawable/rectangle_with_rounded_angles_red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:background="@drawable/rectangle_with_rounded_angles_red"
             android:text="@string/register"
-            />
-
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
 
         <ProgressBar
