--- a/app/src/main/res/layout/fragment_registration_success.xml
+++ b/app/src/main/res/layout/fragment_registration_success.xml
@@ -14,19 +14,18 @@
             android:id="@+id/verify_email_text"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:textColor="@color/white"
             android:background="@drawable/rectangle_with_rounded_angles_red"
+
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:textColor="@color/white"
 
             app:layout_constraintBottom_toTopOf="@+id/santa_on_sledge"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
@@ -40,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/verify_email_text"/>
+            app:layout_constraintTop_toBottomOf="@+id/verify_email_text" />
 
 
     </android.support.constraint.ConstraintLayout>
