--- a/app/src/main/res/layout/meber_list_item_detail.xml
+++ b/app/src/main/res/layout/meber_list_item_detail.xml
@@ -7,11 +7,11 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:contentDescription="@string/member_image"
         android:id="@+id/member_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:contentDescription="@string/member_image"
         android:src="@drawable/christmas_house"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,27 +30,27 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/present"
-            android:contentDescription="@string/present"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_redeem_black_24dp"
-            android:layout_marginEnd="20dp"/>
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/present"
+            android:src="@drawable/ic_redeem_black_24dp" />
 
         <ImageView
-            android:contentDescription="@string/admin"
             android:id="@+id/admin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/admin"
             android:src="@drawable/ic_star_black_24dp" />
 
     </LinearLayout>
