--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -5,6 +5,6 @@
     android:layout_height="wrap_content"
     android:background="@color/bootstrapRed"
     android:elevation="2dp"
-    app:titleTextColor="@android:color/white"
     android:theme="@style/ActionBarStyle"
-    app:title="@string/app_name" />
+    app:title="@string/app_name"
+    app:titleTextColor="@android:color/white" />
