--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -4,21 +4,21 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/my_groups"
+        <item
+            android:id="@+id/my_groups"
             android:checked="true"
-            android:title="@string/my_groups"
-            android:icon="@drawable/ic_people_black_24dp"/>
+            android:icon="@drawable/ic_people_black_24dp"
+            android:title="@string/my_groups" />
 
         <item
             android:id="@+id/unchecked_groups"
-            android:title="@string/group_requests"
-            android:icon="@drawable/ic_people_outline_black_24dp" />
+            android:icon="@drawable/ic_people_outline_black_24dp"
+            android:title="@string/group_requests" />
 
         <item
             android:id="@+id/deleted_groups"
-            android:title="@string/trash"
             android:icon="@drawable/ic_delete_sweep_black_24dp"
-            />
+            android:title="@string/trash" />
     </group>
 
 </menu>
