--- a/app/src/main/res/menu/create_group_menu.xml
+++ b/app/src/main/res/menu/create_group_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        app:showAsAction="ifRoom"
         android:id="@+id/done"
+        android:icon="@drawable/ic_done_white_24dp"
         android:title="@string/Done"
-        android:icon="@drawable/ic_done_white_24dp"/>
+        app:showAsAction="ifRoom" />
 </menu>
