--- a/app/src/main/res/layout/fragment_passive_groups.xml
+++ b/app/src/main/res/layout/fragment_passive_groups.xml
@@ -36,6 +36,21 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/member_item" />
 
+        <TextView
+            android:id="@+id/alone_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:padding="10dp"
+            android:text="@string/quite_alone_here"
+            android:background="@drawable/rectangle_with_rounded_angles_almost_white"
+            android:textSize="20sp"
+            fontPath="fonts/Sail-Regular.otf"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 
     </android.support.constraint.ConstraintLayout>
 
