change photo profile

--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -19,6 +19,11 @@
             android:id="@+id/deleted_groups"
             android:icon="@drawable/ic_delete_sweep_black_24dp"
             android:title="@string/trash" />
+
+        <item
+            android:id="@+id/profile"
+            android:icon="@drawable/ic_person_black_24dp"
+            android:title="@string/profile"/>
     </group>
 
 </menu>
