--- a/app/src/main/res/layout/change_image_dialog.xml
+++ b/app/src/main/res/layout/change_image_dialog.xml
@@ -16,64 +16,59 @@
 
 
     <LinearLayout
+        android:id="@+id/first_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/first_row"
         android:layout_margin="@dimen/nav_header_vertical_spacing"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/picture_christmas_house"
-            android:contentDescription="@string/picture_christmas_house"
             android:layout_width="@dimen/picture_size_dialog"
             android:layout_height="@dimen/picture_size_dialog"
-            app:civ_border_color="#FF000000"
+            android:contentDescription="@string/picture_christmas_house"
             android:src="@drawable/christmas_house"
+            app:civ_border_color="#FF000000"
 
             />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/picture_santaa"
-            android:contentDescription="@string/santaa"
             android:layout_width="@dimen/picture_size_dialog"
             android:layout_height="@dimen/picture_size_dialog"
-            android:src="@drawable/santaa"
-            app:civ_border_color="#FF000000"
             android:layout_marginStart="@dimen/text_margin"
-            />
+            android:contentDescription="@string/santaa"
+            android:src="@drawable/santaa"
+            app:civ_border_color="#FF000000" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/picture_candy_round"
-            android:contentDescription="@string/candy_round"
             android:layout_width="@dimen/picture_size_dialog"
             android:layout_height="@dimen/picture_size_dialog"
-            app:civ_border_color="#FF000000"
-            android:src="@drawable/ic_candy_round"
             android:layout_marginStart="@dimen/text_margin"
-            />
+            android:contentDescription="@string/candy_round"
+            android:src="@drawable/ic_candy_round"
+            app:civ_border_color="#FF000000" />
     </LinearLayout>
-
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/nav_header_vertical_spacing"
-        app:layout_constraintTop_toBottomOf="@id/first_row"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/first_row">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/picture_face"
-            app:civ_border_color="#FF000000"
-            android:contentDescription="@string/face"
             android:layout_width="@dimen/picture_size_dialog"
             android:layout_height="@dimen/picture_size_dialog"
+            android:contentDescription="@string/face"
             android:src="@drawable/face"
-            />
+            app:civ_border_color="#FF000000" />
     </LinearLayout>
 
 
@@ -81,11 +76,10 @@
         android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"
+        android:src="@drawable/ic_done_red_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_done_red_24dp"/>
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
