--- a/app/src/main/res/layout/create_group_activity.xml
+++ b/app/src/main/res/layout/create_group_activity.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/christmas_image"
     tools:context=".activity.CreateGroupActivity">
 
@@ -19,18 +20,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TextInputLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp">
+            android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/group_title"
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/group_image"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="@dimen/nav_header_vertical_spacing"
+                android:src="@drawable/santaa" />
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/group_name"
-                android:inputType="text" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_margin="24dp">
+
+                <EditText
+                    android:id="@+id/group_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/group_name"
+                    android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
+
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="wrap_content"
